css/muttsApp.css
/* ... */
/* ========================================================
              EMOJI PLUGGIN OVERRIDE STYLES
==========================================================*/

.emoji-picker {
  top: -60px !important;
  left: -45px !important;
  height: 20em !important;
  padding-bottom: 0.45em !important;
  border: 1px solid rgb(224, 224, 224) !important;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
.emoji-picker__content {
  height: 14em !important;
}
.emoji-picker__emojis {
  height: 13.5em !important;
  overflow-y: scroll !important;
}
.emoji-picker__preview {
  display: none !important;
}
li.emoji-picker__tab > svg > path {
  fill: gray !important;
}

li.emoji-picker__tab:hover > svg > path {
  fill: rgb(63, 63, 63) !important;
}

.emoji-picker__search {
  padding-left: 5px !important;
  outline: none !important;
}

/* ========================================================
              MODAL SLIDING WINDOW 
==========================================================*/

.modal-window {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-body {
  background-color: #f4f4f4;
  margin: 0;
  width: 30%;
  height: 100%;
  float: left;
  top: 0;
  left: 0;
  box-shadow: 0 5px 8px 0 rgb(0, 0, 0 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
  animation-name: modalopen;
  animation-duration: 0.5s;
  overflow: hidden;
}

.modal-header {
  width: 100%;
  height: 45px;
  background: rgb(221, 94, 82);
  padding: 15px 0;
  color: rgb(238, 238, 238);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.modal-content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #f4f4f4;
}

.contact-wrap {
  height: 70%;
}

.search.form-wrap {
  width: 95%;
  height: 45px;
  border-radius: 20px;
  background-color: white;
  margin-bottom: 15px;
  margin-top: 15px;
}

.form-wrap form {
  height: 30%;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  position: relative;
}

.static-search-icon {
  color: lightgray;
}

input[name="search"] {
  border: none;
  height: 60%;
  width: 80%;
  outline: none; /* === this gets rid of the blue outline ===*/
}

/* ------------EDIT ICON PROFILE MODAL------------ */

.edit-profile-modal-content {
  justify-content: flex-start;
  padding-bottom: 10em;
}

.div-wrap,
#static-name-wrap-id {
  height: 6em;
  width: 100%;
}

.div-wrap > p {
  padding-left: 2em;
  padding-right: 2em;
}

.form-wrap {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: flex-end;
  padding-left: 2em;
  padding-right: 2em;
}

.fas.fa-pen {
  color: #95999c;
}

#edit-name-wrap-id,
#edit-about-wrap-id {
  background-color: #ffffff;
  box-shadow: 0 3px 6px rgba(146, 145, 145, 0.16),
    0 3px 6px rgba(146, 145, 145, 0.16);
}

#edit-profile-img-div {
  width: 100%;
  height: 13em;
  padding-top: 2em;
  padding-bottom: 1em;
}

#edit-profile-img {
  height: 10em;
  width: 10em;
}

#name-input-id,
#about-input-id {
  width: 25em;
  border: none;
  outline: none;
}

#static-name-wrap-id {
  display: flex;
  justify-content: center;
  align-items: center;
}

#static-text-p {
  color: #95999c;
  line-height: 1.3em;
  padding-left: 2em;
  padding-right: 2em;
}

/* ------------FLOATING SEND ICON-------------- */

.float-button {
  position: fixed;
  width: 60px;
  height: 60px;
  bottom: 40px;
  background-color: rgb(67, 196, 163);
  color: #fff;
  border-radius: 50px;
  text-align: center;
  box-shadow: 2px 2px 3px #999;
  transition: all 0.5s;
}

.float-button > i {
  transition: all 0.5s;
  margin-top: 22px;
}

.float-button:hover {
  transform: scale(1.1);
  background-color: rgb(75, 218, 182);
}

.float-button:hover > i {
  transform: scale(1.2);
}

/* ------------------CONTACT SECTION------------------ */

.contact-preview-wrap {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  overflow-y: scroll;
  overflow-x: hidden;
}
.contact-preview-box {
  background-color: #ffffff;
  border: 0.5px solid rgb(231, 229, 229);
  width: 100%;
  height: 100px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
}

/* ========================================================
                      MAIN CHAT
==========================================================*/
.main-chat {
  width: 70%;
  height: 100%;
  position: relative;
  background-color: rgba(223, 207, 197, 0.932);
  display: inline-block;
  overflow-y: auto;
}

.main-chat:after {
  content: " ";
  background-image: url("/images/pokeball-clipart-black-and-white-186526-9437009.svg");
  background-size: 25px;
  position: absolute;
  opacity: 0.4;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
}
.chat-container {
  height: calc(100% - 70px);
  width: calc(100% - 40px);
  display: flex;
  flex-direction: column-reverse;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0 20px;
  overflow-y: auto; /* === this allows to scroll ===*/
}

.chat-bubble {
  background-color: rgb(243, 243, 241);
  box-shadow: 1px 2px 2px rgb(175, 175, 175);
  padding: 4px;
  border-radius: 10px;
  margin-bottom: 10px;
  max-width: 60%;
  position: relative;
  font-size: 0.95em;
}

/* Triangle */
.chat-bubble::before {
  content: " ";
  position: absolute;
  top: 0;
  right: -10px;
  width: 0;
  height: 0;
  border: 10px solid transparent;
  border-top-color: rgb(250, 178, 149);
  margin-left: -10px;
  margin-bottom: -20px;
}

.chat-bubble.in::before {
  border-top-color: rgb(243, 243, 241);
  left: 0;
}

.chat-bubble.out {
  background-color: rgb(250, 178, 149);
  align-self: flex-end;
}
/* ... */

